@@ -46,7 +46,7 @@
 .SH NAME
 g_diff \- a BRL-CAD differential geometry comparator
 .SH SYNOPSIS
-.BR "g_diff " "[-m] [-f] [-v] model1.g model2.g"
+.BR "g_diff " "[-e][-m] [-f] [-v] model1.g model2.g"
 .SH DESCRIPTION
 .I G_diff
 compares the two BRL-CAD models specified on the comand line. The results of this comparison
@@ -61,6 +61,10 @@ and
 .I db adjust
 commands in mged(1). A few solid types are not supported by these commands, and changes involving these
 solids are merely noted (the script will not actually be capable of performing all the changes in this case).
+The
+.I -e
+option selections evolutionary mode, which attempts to guess if a change in a region is due to an evolutionary change or a reworking.
+The output is similar to -m, but it is NOT mged readable.
 The
 .I -f
 option requests that all floating point numerical comparisons be done in single precision rather
